# backend_rust_axum_20240906

./: .env  Cargo.toml  Makefile  README.md  compose.yaml
docs/: 20240906.md
migrations/: 20240905131419_init.sql
src/: main.rs
